[package]
name = "canistersdktest_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
serde = "1.0"
ic-exports = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-exports" }
ic-storage = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-storage" }
ic-canister = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-canister" }
ic-helpers = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-helpers" }
